# digital-twin_dod

./: .gitignore  README.md  instructions.md  main.py  overview.md  patch_notes.md  pyproject.toml
docs/: architectural_shift.md  iterations.md  overview.md  patch_notes.md  walkthrough.md
src/: supervisor.py
src/config/: __init__.py  bess_config.py  genset_config.py  pv_config.py  settings.py
src/config/templates/: template_simulation.json
src/core/: __init__.py  registry.py  shm_manager.py
src/drivers/: __init__.py  canbus_driver.py  modbus_engine.py
src/engine/: __init__.py  physics.py  shadow_twin.py
src/scripts/: send_update.py
src/services/: __init__.py  db_writer.py  mqtt_publisher.py  mqtt_subscriber.py
tests/: test_phase1_config.py  test_phase1_hardcoded.py  test_phase2_shm.py  test_phase3_supervisor.py  test_phase4_engine.py  test_physics_aggregation.py
tests/fixtures/: invalid_schema.json  malformed.json  valid_config.json
