[project]
name = "digital-twin-dod"
version = "0.1.0"
description = "High-Performance Microgrid Digital Twin using Data-Oriented Design"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "pydantic>=2.13.1",
    "pymodbus==3.6.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/config",
    "src/core",
    "src/drivers",
    "src/engine",
    "src/services",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
